Iterated on yaml format a bit

--- a/full-app-mockup/core/src/core/parsing/parser_config/messages/inner_message_v1.0.yaml
+++ b/full-app-mockup/core/src/core/parsing/parser_config/messages/inner_message_v1.0.yaml
@@ -1,9 +1,12 @@
 type: INNER_MESSAGE
 version: "1.0"
 fields:
-  message_protocol:
-    type: TYPESPEC
-    version: "any" #specifies allowed version of thing in typespec field
-  remainder:
-    type: "CONTEXTUAL"
-    reference_field: "message_protocol"
+- name: message_protocol
+  type: typespec
+- name: message_headers
+  type: CONTEXTUAL
+  reference_field: "message_protocol"
+  version: "any" # Should this go here?
+- name: message_data
+  type: MESSAGE_DATA
+  version: "any"
