--- a/full-app-mockup/core/src/core/parsing/parser_config/messages/message_data_v1.0.yaml
+++ b/full-app-mockup/core/src/core/parsing/parser_config/messages/message_data_v1.0.yaml
@@ -1,8 +1,8 @@
 type: MESSAGE_DATA
 version: "1.0"
 fields:
-  data_format:
-    type: TYPESPEC
-  data:
-    type: "CONTEXTUAL"
-    reference_field: "data_format"
+- name: data_format
+  type: typespec
+- name: data
+  type: CONTEXTUAL
+  reference_field: "data_format"
