--- a/full-app-mockup/core/src/core/parsing/parser_config/protocols/advanced_protocol_v1.0.yaml
+++ b/full-app-mockup/core/src/core/parsing/parser_config/protocols/advanced_protocol_v1.0.yaml
@@ -1,22 +1,15 @@
 type: ADVANCED_PROTOCOL
 version: "1.0"
 fields:
-  message_timestamp: #Seconds since reference time
-    type: "uint"
-    bytes: 8
-  message_protocol_state:
-    type: "uint"
-    bytes: 1
-  message_protocol_round_number:
-    type: "uint"
-    bytes: 2
-  message_protocol_nonce:
-    type: "uint"
-    bytes: 8
-  sender_name:
-    type: "variable_string_256"
-  recipient_name:
-    type: "variable_string_256"
-  message_content:
-    type: MESSAGE_DATA
-    version: "any"
+  - name: message_timestamp #Seconds since reference time
+    type: "uint64"
+  - name: message_protocol_state
+    type: "uint8"
+  - name: message_protocol_round_number
+    type: "uint16"
+  - name: message_protocol_nonce
+    type: "uint64"
+  - name: sender_name
+    type: "variable_string_8"
+  - name: recipient_name
+    type: "variable_string_8"
