--- a/full-app-mockup/core/src/core/parsing/parser_config/protocols/basic_protocol_v1.0.yaml
+++ b/full-app-mockup/core/src/core/parsing/parser_config/protocols/basic_protocol_v1.0.yaml
@@ -1,13 +1,9 @@
 type: BASIC_PROTOCOL #stateless, directly send the data
 version: "1.0"
 fields:
-  message_timestamp: #Seconds since reference time
-    type: "uint"
-    bytes: 8
-  sender_name:
-    type: "variable_string_256"
-  recipient_name:
-    type: "variable_string_256"
-  message_content:
-    type: MESSAGE_DATA
-    version: "any"
+  - name: message_timestamp #Seconds since reference time
+    type: "uint64"
+  - name: sender_name
+    type: "variable_string_8"
+  - name: recipient_name
+    type: "variable_string_8"
