--- a/full-app-mockup/core/src/core/parsing/parser_config/protocols/basic_protocol_v1.0.yaml
+++ b/full-app-mockup/core/src/core/parsing/parser_config/protocols/basic_protocol_v1.0.yaml
@@ -2,7 +2,7 @@ type: BASIC_PROTOCOL #stateless, directly send the data
 version: "1.0"
 fields:
   - name: message_timestamp #Seconds since reference time
-    type: "uint64"
+    type: "uint_64"
   - name: sender_name
     type: "variable_string_8"
   - name: recipient_name
