fixed some things for testing

--- a/full-app-mockup/core/src/core/parsing/parser_config/v1.0/messages/MESSAGE.v.1.0.yaml
+++ b/full-app-mockup/core/src/core/parsing/parser_config/v1.0/messages/MESSAGE.v.1.0.yaml
@@ -1,12 +1,10 @@
-type: OUTER_MESSAGE
-version: "1.0"
+config_version: 1.0
+type: MESSAGE.v.1.0
+prepend_type_name: true
 fields:
-- name: version
-  type: "versionspec"
 - name: message
   type: "variable_bytes_32"
-  inner_type: INNER_MESSAGE
-  inner_version: "any"
+  inner_type: INNER_MESSAGE.v.1.0
 - name: signature
   type: "variable_bytes_16"
 - name: signer_identity
